# git-legal-collector

./: .gitignore  README.md  pyproject.toml
git_legal/: __main__.py  api_client.py  cli.py  config.py  csvstorage.py  downloader.py  parser.py  storage.py
