[project]
name = "git-legal"
version = "0.1.0"
description = "Download data from BOE (Boletín Oficial del Estado) API"
authors = [
    {name = "Git Legal Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
git-legal = "git_legal.cli:main"
